iframe z-index correction

--- a/second-session/scripts/components/YoutubePlayer/css/youtubeplayer.less
+++ b/second-session/scripts/components/YoutubePlayer/css/youtubeplayer.less
@@ -8,6 +8,10 @@
     top:0;
     left: 34.3%;
     height:100%;
+    iframe {
+        position: relative;
+        z-index: 11;
+    }
 }
 
 @media screen and (max-width: @breakpoint-mobile) {
